data/all_generated_tests/raw_wast_tests/br_table_EdgeCaseFailuresinbr_table_2507.wast
;; ```  7. **Correct Index But Invalid Operand Stack Configuration**:    ```plaintext    Validate a `br_table` with a correct index but with a misconfigured operand stack (e.g., missing operands). This checks for internal consistency and correct operand management when branches are taken.

(assert_invalid
  (module (func $incorrect-stack-configuration
    (block (br_table 0 (i32.const 1)))
  ))
  "type mismatch"
)